src/instrumentation/snapshots/bombadil__instrumentation__js__tests__instrument_source_code_ternary_assignment.snap
---
source: src/instrumentation/js.rs
expression: code
---
window.antithesis = window.antithesis || {
    edges_previous: new Uint8Array(65536),
    edges_current: new Uint8Array(65536),
    previous: 0,
};
let x;
function example(a, b, c) {
	return a ? (() => {
		antithesis.edges_current[(0x76be999e3e25b400 ^ antithesis.previous) % 65536] += 1;
		antithesis.previous = 0x76be999e3e25b400 >> 1;
		return console.log(x), x = b;
	})() : (() => {
		antithesis.edges_current[(0x7359aa1156ce8800 ^ antithesis.previous) % 65536] += 1;
		antithesis.previous = 0x7359aa1156ce8800 >> 1;
		return console.log(x), x = c;
	})();
}
console.log(example(true, 1, 2), x);
